--- a/src/components/keyboard/styles.module.css
+++ b/src/components/keyboard/styles.module.css
@@ -62,6 +62,7 @@
   color: #666565;
   font-size: 16px;
   text-shadow: 1px 1px 1px rgb(252, 252, 252);
+  cursor: pointer;
 
   -webkit-box-shadow:
     inset 0 0 25px #ffffff,
