--- a/src/app/ui/global.css
+++ b/src/app/ui/global.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Inconsolata|Source-Code-Pro&effect=fire-animation|neon');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
