--- a/src/components/keyboard/styles.module.css
+++ b/src/components/keyboard/styles.module.css
@@ -120,3 +120,56 @@
 .capslock {color:rgb(4, 255, 0); text-shadow: 0 0 1px #000000, 0 0 2px #73ff00;
 }
 
+
+.clickThisKey {
+
+  /*     -webkit-box-shadow: 0 0 17px 3px #ffff01, 0 0 4px 2px #ffff01;
+      box-shadow: 0 0 17px 3px #ffff01, 0 0 4px 2px #ffff01; */
+      z-index: -1;
+      -webkit-animation-name: gradient-shadow;
+      animation-name: gradient-shadow;
+      -webkit-animation-timing-function: cubic-bezier(0.1, -0.6, 0.2, 0);
+       animation-timing-function: cubic-bezier(0.1, -0.6, 0.2, 0);
+      -webkit-animation-duration: 2s;
+      animation-duration: 2s;
+      -webkit-animation-iteration-count: infinite;
+      animation-iteration-count: infinite;
+  }
+  
+  @-webkit-keyframes gradient-shadow {
+      0% {
+          -webkit-box-shadow: inset 0 0 25px #ffffff, 0 2px 0 #6c6c6c, 1px 3px 0 #484848, 0 2px 0 #c9c9c9, 0 2px 3px #333;
+          box-shadow:         inset 0 0 25px #ffffff, 0 2px 0 #6c6c6c, 1px 3px 0 #484848, 0 2px 0 #c9c9c9, 0 2px 3px #333;
+      }
+      30% {
+          -webkit-box-shadow: 0 0 17px 3px #ff000090, 0 0 4px 2px #ff0000;
+          box-shadow:         0 0 17px 3px #ff000090, 0 0 4px 2px #ff0000;
+      }
+      95% {
+          -webkit-box-shadow: 0 0 17px 3px #ff000090, 0 0 4px 2px #ff0000;
+          box-shadow:          0 0 17px 3px #ff000090, 0 0 4px 2px #ff0000;
+      }
+      100% {
+          -webkit-box-shadow: inset 0 0 25px #ffffff, 0 2px 0 #6c6c6c, 1px 3px 0 #484848, 0 2px 0 #c9c9c9, 0 2px 3px #333;
+          box-shadow:         inset 0 0 25px #ffffff, 0 2px 0 #6c6c6c, 1px 3px 0 #484848, 0 2px 0 #c9c9c9, 0 2px 3px #333;
+      }
+  }
+    
+  @keyframes gradient-shadow {
+      0% {
+          -webkit-box-shadow: inset 0 0 25px #ffffff, 0 2px 0 #6c6c6c, 1px 3px 0 #484848, 0 2px 0 #c9c9c9, 0 2px 3px #333;
+          box-shadow:         inset 0 0 25px #ffffff, 0 2px 0 #6c6c6c, 1px 3px 0 #484848, 0 2px 0 #c9c9c9, 0 2px 3px #333;
+      }
+      30% {
+          -webkit-box-shadow: 0 0 17px 3px #ff000090, 0 0 4px 2px #ff0000;
+          box-shadow:         0 0 17px 3px #ff000090, 0 0 4px 2px #ff0000;
+      }
+      95% {
+          -webkit-box-shadow: 0 0 17px 3px #ff000090, 0 0 4px 2px #ff0000;
+          box-shadow:          0 0 17px 3px #ff000090, 0 0 4px 2px #ff0000;
+      }
+      100% {
+          -webkit-box-shadow: inset 0 0 25px #ffffff, 0 2px 0 #6c6c6c, 1px 3px 0 #484848, 0 2px 0 #c9c9c9, 0 2px 3px #333;
+          box-shadow:         inset 0 0 25px #ffffff, 0 2px 0 #6c6c6c, 1px 3px 0 #484848, 0 2px 0 #c9c9c9, 0 2px 3px #333;
+      }
+  }
