--- a/src/app/ui/global.css
+++ b/src/app/ui/global.css
@@ -5,6 +5,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base{
+  body {
+      @apply dark:bg-gray-800 bg-white
+  }
+}
+
 input[type='number'] {
   -moz-appearance: textfield;
   appearance: textfield;
@@ -19,3 +25,5 @@ input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+
