apply design to the logout button

--- a/src/app/ui/global.css
+++ b/src/app/ui/global.css
@@ -11,6 +11,28 @@
   }
 }
 
+@layer base {
+
+  :root {
+    --color-primary: 37 99 235;
+    --color-text: 33 33 33;
+    --color-success: 0 200 81;
+    --color-info: 51 181 229;
+    --color-warn: 255 187 51;
+    --color-error: 254 78 78;
+  }
+
+  :root[class~="dark"] {
+    --color-primary: 247 147 34;
+    --color-text: 33 33 33;
+    --color-success: 0 200 81;
+    --color-info: 51 181 229;
+    --color-warn: 255 187 51;
+    --color-error: 254 78 78;
+  }
+}
+
+
 input[type='number'] {
   -moz-appearance: textfield;
   appearance: textfield;
