--- a/src/components/keyboard/styles.module.css
+++ b/src/components/keyboard/styles.module.css
@@ -4,8 +4,6 @@
   border-radius: 30px;
   margin: 10px auto 10px auto;
   padding: 6px;
-  max-width: 833px;
-  min-width: 450px;
   width: 100%;
   height: fit-content;
   background: #bec4c6;
@@ -173,3 +171,59 @@
           box-shadow:         inset 0 0 25px #ffffff, 0 2px 0 #6c6c6c, 1px 3px 0 #484848, 0 2px 0 #c9c9c9, 0 2px 3px #333;
       }
   }
+
+
+  @media only screen and (max-width: 768px) {
+    .keyboard {
+      transform: none; /* Remove transform */
+      border: none; /* Remove border */
+      border-radius: 0; /* Remove border-radius */
+      margin: 0; /* Remove margin */
+      padding: 0; /* Remove padding */
+      max-width: none; /* Remove max-width */
+      min-width: none; /* Remove min-width */
+      width: 100%; /* Adjust width */
+      height: auto; /* Adjust height */
+      background: none; /* Remove background */
+      -moz-user-select: text; /* Allow text selection */
+      -khtml-user-select: text;
+      -webkit-user-select: text;
+      -ms-user-select: text;
+      user-select: text;
+      cursor: text; /* Change cursor */
+      background-image: none; /* Remove background image */
+      -webkit-box-shadow: none; /* Remove box shadow */
+      -moz-box-shadow: none;
+      box-shadow: none;
+    }
+
+    .key {
+      margin: 2px;
+      text-align: center;
+      color: #666565;
+      text-shadow: 1px 1px 1px rgb(252, 252, 252);
+      cursor: pointer;
+    
+      -webkit-box-shadow:
+      none;
+      -moz-box-shadow:
+      none;
+      box-shadow:
+      none;
+    }
+
+.key:active,
+.keydown {
+  background: radial-gradient(at 40% 1%, #c4c4c4 5%, rgb(216, 217, 214) 70%);
+  border: solid 1px #8e8e8e;
+  margin: 2px;
+  color: #666565;
+  -webkit-box-shadow:
+  none;
+  -moz-box-shadow:
+  none;
+  box-shadow:
+  none;
+}
+
+}
